--- a/estilos.css
+++ b/estilos.css
@@ -54,6 +54,17 @@ footer{
     width: 100%;
     padding: 20px;
 }
+
+//Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) {
+    width: 100%;
+}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+    width: 100%;
+      }
+
 @media screen and (max-width:800px){
     .main {
         width: 100%;
@@ -61,13 +72,6 @@ footer{
     aside {
              width: 100%;
     }
-}
-@media screen and (max-width:400px){
-    .contenedor {
-        width: 100%;
-    }
-    aside {
-        display: none;
-    }
+
 }
 
