--- a/estilos.css
+++ b/estilos.css
@@ -53,25 +53,25 @@ footer{
     box-sizing: border-box;
     width: 100%;
     padding: 20px;
-}
-
-//Small devices (landscape phones, 576px and up)
-@media (min-width: 576px) {
-    width: 100%;
-}
-
-// Medium devices (tablets, 768px and up)
-@media (min-width: 768px) {
-    width: 100%;
-      }
-
 @media screen and (max-width:800px){
-    .main {
-        width: 100%;
+    #contenedor{
+               width: 100%;
     }
-    aside {
-             width: 100%;
-    }
-
 }
+@media screen and (max-width:400px){
+        #sidebar{
+            display: none;
+    } 
+}
+    #menu{
+        text-align: center;
+    }
+@media screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape){
+        .entry, .entry-content
+        {
+            font-size:1.2em;
+           line-height:1.5em;
+ 
+        }
+ }
 
