--- a/estilos.css
+++ b/estilos.css
@@ -53,25 +53,35 @@ footer{
     box-sizing: border-box;
     width: 100%;
     padding: 20px;
-@media screen and (max-width:800px){
-    #contenedor{
-               width: 100%;
-    }
 }
-@media screen and (max-width:400px){
-        #sidebar{
-            display: none;
-    } 
+/*Escritorio*/
+@media (min-width: 1199.98px)  {
+    body{background: red;}
 }
-    #menu{
-        text-align: center;
-    }
-@media screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape){
-        .entry, .entry-content
-        {
-            font-size:1.2em;
-           line-height:1.5em;
- 
-        }
+/*Fin Escritorio*/
+
+/*Tablet*/
+/*Portrait*/
+@media (min-width: 576px) and (max-width: 991.98px) and (orientation:portrait) {
+    body{background: orange;}
+}
+
+/*landscape*/
+@media (min0-width: 991.98px) and (max-width: 1199.98px)and (orientation:landscape) {
+    body{background: blue;}
+}
+/*fin tablet*/
+
+/*movil*/
+/*Portrait*/
+/*Default*/
+@media (max-width: 575.98px)and (orientation:portrait) {
+    body{background: green;}
+ }
+/*landscape*/
+@media (min-width: 576px) and (max-width: 991.98px) and (orientation:landscape) {
+    body{background: black;}
+}
+/*fin movil*/
  }
 
