--- a/estilos.css
+++ b/estilos.css
@@ -54,20 +54,31 @@ footer{
     width: 100%;
     padding: 20px; 
 }
-@media screen and (max-width: 800px) {
-      #contenedor{
-                           width:100%;
-                           }
+@media screen and (max-width: 980px){
+    #contenedor{
+        width: 90%;
+    }
+    #contenido{
+        width: 60%;
+    }
+    #barra_lateral{
+        width:30%;
+    }
 }
-@media screen and (max-device-width : 480px) {
-
-        #sidebar{
-	        display:none;
-	        }
-
-                #menu{
-               text-align:center;
-               }
+@media screen and (max-width: 480px){
+    #encabezado{
+        height: auto;
+    }
+    #contenido{
+        width: auto;
+    }
+    #barra_lateral{
+        display:none;
+    }
+}
+img {
+    max-width: 100%;
+    height: auto;
 }
 @media screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape){
        .entry, .entry-content
