--- a/estilos.css
+++ b/estilos.css
@@ -8,10 +8,15 @@ body{
     font-family: Arial;
 }
 .contenedor {
-    width: 80%;
-    max-width: 1000px;
-    margin: 0 auto;
-    background:rgb(0, 195, 255);
+    /*width: 80%;*/
+   /* max-width: 1000px;*/
+   /* margin: 0 auto;*/
+    /*background:rgb(0, 195, 255);*/
+    width:100%;
+    margin-right:auto;
+    margin-left:auto;
+ .contenedor img{
+     width:100%;}
 }
 header{
     background-color:rgb(0, 195, 255)
