--- a/estilos.css
+++ b/estilos.css
@@ -1,7 +1,27 @@
 * {
-    margin: 0;
-    padding: 0;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+}
 
+html {
+	font-size: 62.5%;
+	line-height: 1;
+}
+
+p {
+	font-size: 15px;
+	font-size: 1.5rem;
+	line-height: 1.333333334;
+	margin-bottom: 20px;
+	margin-bottom: 2rem;
+	text-align: justify;
+}
+
+.three-columns {
+	margin: 20px;
+	margin: 2rem;
+}
 }
 body{
     background-color: aqua;
