--- a/estilos.css
+++ b/estilos.css
@@ -26,6 +26,9 @@ p {
 body{
     background-color: aqua;
     font-family: Arial;
+    img {
+         width: 100%;
+    }
   
 .contenedor {
     /*width: 80%;*/
@@ -44,6 +47,7 @@ header{
     background-color:rgb(0, 195, 255)
 }
 nav{
+    
     background-color:rgb(43, 159, 226);
     margin: 20px;
     }
