--- a/estilos.css
+++ b/estilos.css
@@ -115,3 +115,9 @@ footer{
 		width:50%;
 	}
 }
+/* Diseño para PC */ 
+@media screen and (min-width: 1025px) {
+	#columna1, #columna2, #columna3 {
+	float:left;
+	width:33%;
+}
